@@ -9,6 +9,14 @@ For more detailed instructions on filling in the ChangeLog form, see
 ******************************************************************************
 post-release patch
 
+2001-11-29  Kevin Layer  <layer@crikey>
+
+	* fi-basic-lep.el: fi::lep-debug is history, as it is now needed
+	all the time because of a change I made to
+	lep::make-session-for-lisp (to fix another bug).
+	* fi-utils.el: fi:start-interface-via-file: bind do not set
+	fi:connect-to-windows to `t'.
+
 2001-11-14  Kevin Layer  <layer@crikey>
 
 	* fi-site-init.el: for emacs 21
